--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme_color" content="#3a1a86" />
     <meta name="description" content="Ecommerce | Beta testing..." />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="manifest" href="/manifest.json" />
 
     <title>Ecommerce | Beta testing...</title>
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/style.css" />
+    <link rel="stylesheet" type="text/css" href="/style.css" />
 </head>
 
 <body id="page-top">
