--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme_color" content="#3a1a86" />
-    <meta name="description" content="Ecommerce | Beta testing..." />
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#317EFB"/>
+    <meta name="description" content="Hayroo | A ecommerce website" />
 
-    <title>Ecommerce | Beta testing...</title>
-    <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="apple-touch-icon" href="./logo192.png">
+
+    <title>Ecommerce | Beta</title>
+    <link rel="manifest" href="./manifest.json">
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
 <body id="page-top">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="font-light text-base text-gray-800 bg-white flex flex-col min-h-screen" id="root"></div>
-    <script src="app.js"></script>
+
+    <script src="./app.js"></script>
 </body>
 
 </html>
