--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#317EFB"/>
-    <meta name="description" content="Hayroo | A ecommerce website" />
+    <meta name="description" content="Bekadev | A ecommerce website" />
 
     <link rel="apple-touch-icon" href="./logo192.png">
 
