--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,7 +19,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="font-light text-base text-gray-800 bg-white flex flex-col min-h-screen" id="root"></div>
 
-    <script src="./app.js"></script>
+    <!-- <script src="./app.js"></script> -->
 </body>
 
 </html>
